--- a/src/components/portfolio-section/style/portfolio-section.css
+++ b/src/components/portfolio-section/style/portfolio-section.css
@@ -1,3 +1,45 @@
-.text-36{
-    font-size: 36px;
+.text-36 {
+  font-size: 36px;
+}
+
+.text-16 {
+  font-size: 16px;
+}
+
+.portfolio-link-color {
+  color: #444444;
+}
+
+.portfolio-link-color:hover{
+    color: #1bb1dc !important;
+    cursor: pointer;
+}
+
+.active-link:active{
+    color: #1bb1dc !important;
+    
+    
+}
+
+.portfolio-section-bg-color{
+    background-color:#F5F8FD;
+}
+
+
+.image {
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
 }
